@@ -4,7 +4,8 @@
 
 ACLOCAL_AMFLAGS = -I ../../../../../../aclocal
 
-SUBDIRS = . score clock sci timer
+include $(top_srcdir)/../../../../../../automake/compile.am
+include $(top_srcdir)/../../../../../../automake/lib.am
 
 # NOTE: Unlike other CPUS, we install into a subdirectory to avoid
 #       file name conflicts
@@ -24,11 +25,64 @@ $(PROJECT_INCLUDE)/sh/%.h: include/%.h
 $(PROJECT_INCLUDE)/rtems/score/%.h: include/%.h
 	$(INSTALL_DATA) $< $@
 
-TMPINSTALL_FILES = $(PROJECT_INCLUDE)/sh \
+PREINSTALL_FILES = $(PROJECT_INCLUDE)/sh \
     $(include_sh_HEADERS:include/%=$(PROJECT_INCLUDE)/sh/%) \
     $(include_rtems_score_HEADERS:include/%=$(PROJECT_INCLUDE)/rtems/score/%)
 
-all-local: $(TMPINSTALL_FILES)
+# clock
 
-include $(top_srcdir)/../../../../../../automake/subdirs.am
+PGMS = $(ARCH)/clock.rel
+
+clock_C_FILES = clock/ckinit.c
+clock_rel_OBJECTS = $(clock_C_FILES:clock/%.c=$(ARCH)/%.$(OBJEXT))
+EXTRA_DIST = $(clock_C_FILES)
+
+${ARCH}/%.$(OBJEXT): clock/%.c
+	${COMPILE} -o $@ -c $<
+${ARCH}/clock.rel: $(clock_rel_OBJECTS)
+	${make-rel}
+
+# sci
+
+PGMS += $(ARCH)/sci.rel
+
+sci_C_FILES = sci/sci.c sci/sci_termios.c
+sci_rel_OBJECTS = $(sci_C_FILES:sci/%.c=$(ARCH)/%.$(OBJEXT))
+EXTRA_DIST += $(sci_C_FILES)
+
+${ARCH}/%.$(OBJEXT): sci/%.c
+	${COMPILE} -o $@ -c $<
+${ARCH}/sci.rel: $(sci_rel_OBJECTS)
+	${make-rel}
+
+# score
+
+PGMS += $(ARCH)/score.rel
+
+score_C_FILES = score/cpu_asm.c score/ispsh7045.c
+score_rel_OBJECTS = $(score_C_FILES:score/%.c=$(ARCH)/%.$(OBJEXT))
+EXTRA_DIST += $(score_C_FILES)
+
+${ARCH}/%.$(OBJEXT): score/%.c
+	${COMPILE} -o $@ -c $<
+${ARCH}/score.rel: $(score_rel_OBJECTS)
+	${make-rel}
+
+## timer
+
+PGMS += $(ARCH)/timer.rel
+
+timer_C_FILES = timer/timer.c
+timer_rel_OBJECTS = $(timer_C_FILES:timer/%.c=$(ARCH)/%.$(OBJEXT))
+EXTRA_DIST += $(timer_C_FILES)
+
+${ARCH}/%.$(OBJEXT): timer/%.c
+	${COMPILE} -o $@ -c $<
+${ARCH}/timer.rel: $(timer_rel_OBJECTS)
+	${make-rel}
+
+all-local: $(ARCH) $(PGMS) $(TMPINSTALL_FILES)
+
+.PRECIOUS: $(PGMS)
+
 include $(top_srcdir)/../../../../../../automake/local.am
