@@ -1,27 +1,0 @@
-##
-## $Id$
-##
-
-
-PGM = $(ARCH)/sci.rel
-
-C_FILES = sci.c sci_termios.c
-OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-include $(top_srcdir)/../../../../../../automake/compile.am
-include $(top_srcdir)/../../../../../../automake/lib.am
-
-#
-# (OPTIONAL) Add local stuff here using +=
-#
-
-$(PGM): $(OBJS)
-	$(make-rel)
-
-all-local: $(ARCH) $(OBJS) $(PGM)
-
-.PRECIOUS: $(PGM)
-
-EXTRA_DIST = sci.c sci_termios.c
-
-include $(top_srcdir)/../../../../../../automake/local.am
